--- a/Traffic_Sign_Classifier.html
+++ b/Traffic_Sign_Classifier.html
@@ -12836,13 +12836,13 @@ Test Accuracy = 0.929
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">scipy</span> <span class="k">import</span> <span class="n">misc</span>
-<span class="kn">import</span> <span class="nn">csv</span>
+
 <span class="k">def</span> <span class="nf">load_and_display</span><span class="p">(</span><span class="n">pic</span><span class="p">):</span>
-    <span class="n">b</span> <span class="o">=</span> <span class="n">misc</span><span class="o">.</span><span class="n">imread</span><span class="p">(</span><span class="n">pic</span> <span class="c1">#load pic from file</span>
+    <span class="n">b</span> <span class="o">=</span> <span class="n">misc</span><span class="o">.</span><span class="n">imread</span><span class="p">(</span><span class="n">pic</span><span class="p">)</span> <span class="c1">#load pic from file</span>
     <span class="n">b</span> <span class="o">=</span> <span class="n">b</span><span class="p">[:,:,:</span><span class="mi">3</span><span class="p">]</span> <span class="c1"># remove alpha layer if there is one</span>
     <span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">2</span><span class="p">,</span><span class="mi">2</span><span class="p">))</span>
     <span class="n">plt</span><span class="o">.</span><span class="n">imshow</span><span class="p">(</span><span class="n">b</span><span class="p">)</span>
